--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .env
-test_utilities/.env
+tests/.env
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -104,7 +104,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-test_utilities/.env
+tests/.env
 .venv
 env/
 venv/
