--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 .env
 tests/.env
+tests/testing.py
 tests/testing_list.txt
+tests/pytest/testing_list.txt
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
